Prevent text from interfering with label - Switched to invisible border vs wrapper

--- a/src/style/components/inputs.scss
+++ b/src/style/components/inputs.scss
@@ -112,29 +112,20 @@ $input-font-size: $paragraph-font-size;
   height: initial;
 }
 
-.s-input__textarea__wrapper {
-  height: 100%;
-  width: 100%;
-  cursor: text;
-  padding:  $input-padding ($input-padding / 2) ($input-padding / 2) $input-padding;
-  &--with-label {
-    padding: ($input-padding * 2) ($input-padding / 2) ($input-padding / 2) $input-padding;
-  }
-}
-
 .s-input__textarea {
   resize: none;
-  box-sizing: border-box;
-  padding: 0 $input-padding 0 0;
+  box-sizing: content-box;
+  border-top: $input-padding solid transparent;
+  padding: 0 $input-padding ($input-padding / 2) $input-padding;
   height: 100%;
   width: 100%;
+
+  &--with-label {
+    border-top: ($input-padding * 2) solid transparent;
+  }
 
   // Scrollbar mess with auto-sizing. Simply hide it for now.
   &::-webkit-scrollbar {
     display: none;
   }
 }
-
-
-
-
